[gd_scene load_steps=7 format=3 uid="uid://b3g45kyc22pr3"]

[ext_resource type="Script" path="res://Scripts/Enemigo.gd" id="1_swd85"]
[ext_resource type="Texture2D" uid="uid://ctffx3dq1iovy" path="res://Assets/3 Dude_Monster/Dude_Monster_Walk_6.png" id="2_i2mhw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3ouup"]
size = Vector2(20.4837, 214.675)

[sub_resource type="Animation" id="Animation_n1k4p"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivote/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_i2mhw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivote/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivote/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [3]
}

[sub_resource type="Animation" id="Animation_nqais"]
resource_name = "Walk"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Pivote/Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_i2mhw")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Pivote/Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Pivote/Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_6b42h"]
_data = {
"RESET": SubResource("Animation_n1k4p"),
"Walk": SubResource("Animation_nqais")
}

[node name="CharacterBody2D" type="CharacterBody2D"]
collision_layer = 3
collision_mask = 3
floor_constant_speed = true
floor_max_angle = 0.872665
floor_snap_length = 10.0
script = ExtResource("1_swd85")

[node name="Pivote" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Pivote"]
scale = Vector2(2, 2)
texture = ExtResource("2_i2mhw")
hframes = 6
frame = 3
region_filter_clip_enabled = true

[node name="FloorRay" type="RayCast2D" parent="Pivote"]
position = Vector2(20, 16)
target_position = Vector2(0, 32)
collision_mask = 3

[node name="SideRay" type="RayCast2D" parent="Pivote"]
position = Vector2(0, 8)
rotation = -1.5708
target_position = Vector2(-9.53674e-07, 24)
collision_mask = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1.51309, 8)
scale = Vector2(1.41448, -0.223593)
shape = SubResource("RectangleShape2D_3ouup")

[node name="Walk_Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_6b42h")
}
